# ComputerVision

Final Project/Submission/: CMakeLists.txt
Final Project/Submission/include/: tree_detector.h
Final Project/Submission/src/: TreeDetector.cpp  project_main.cpp
Homework 1-2/Lab3/: CMakeLists.txt
Homework 1-2/Lab3/include/: filter.h
Homework 1-2/Lab3/src/: filter.cpp  lab3.cpp
Homework 1-2/Lab4/: CMakeLists.txt
Homework 1-2/Lab4/src/: Lab4.cpp
Homework 3/Lab5/: CMakeLists.txt
Homework 3/Lab5/include/: panoramic_image.h  panoramic_utils.h
Homework 3/Lab5/src/: Lab5.cpp  PanoramicImage.cpp
